# cuda_practice

./: .gitignore  Makefile  test.ipynb
CuTe/: CMakeLists.txt  copy.cu  layout.cu  mma.cu  tensor.cu
Kittens/: attn.cu  matmul.cu
include/: utils.hpp
ldmatrix/: test.cu  test_ldmatrix.cu
sgemm/: MMAV0.cu  MMAv0.cu  MMAv1.cu  MMAv2.cu  cublasMMA.cu
utils/: Arch.cu  Prof.cu  checker.cu  helper.hpp
